--- a/每日一题/8月14日树的子结构/树的子结构.md
+++ b/每日一题/8月14日树的子结构/树的子结构.md
@@ -1,7 +1,6 @@
 ---
 title: 2019-8-14 树的子结构
 tags: 算法,每日一题,二叉树
-grammar_cjkRuby: true
 ---
 
 ## 树的子结构
@@ -23,13 +22,14 @@ grammar_cjkRuby: true
 可以看出子树是要比子结构更加严格的，如果B是A的子树那必定是A的子结构，反之则不然。
 
 下面有一个图说明二者的区别。
-![树的子树和子结构](../../图/每日一题/树的子结构/树的子结构.jpg)
+![树的子树和子结构](http://pwfic6399.bkt.clouddn.com/wechat/daily_topic/8_14/%E6%A0%91%E7%9A%84%E5%AD%90%E7%BB%93%E6%9E%84.jpg?imageView2/0/q/75|watermark/2/text/d3NoYW93/font/YXJpYWw=/fontsize/400/fill/I0NBQkFDQQ==/dissolve/73/gravity/SouthEast/dx/10/dy/10|imageslim)
 
 #### 2.2 解题思路
 **step1**：遍历二叉树A，找到对应的与二叉树B根节点值相等的节点，如果找到了进入**step2**。
+
 **step2**: 假如**step1** 找到了一个节点Node， 以Node为根节点的二叉树的子树，依次从这个子树的根节点和二叉树B的根节点开始遍历依次比较每个对应的节点是否相等。
 
-![树的子结构步骤图](../../图/每日一题/树的子结构/树的子结构步骤图.jpg)
+![树的子结构步骤图](http://pwfic6399.bkt.clouddn.com/wechat/daily_topic/8_14/%E6%A0%91%E7%9A%84%E5%AD%90%E7%BB%93%E6%9E%84%E6%AD%A5%E9%AA%A4%E5%9B%BE.jpg?imageView2/0/q/75|watermark/2/text/d3NoYW93/font/YXJpYWw=/fontsize/400/fill/I0NBQkFDQQ==/dissolve/73/gravity/SouthEast/dx/10/dy/10|imageslim)
 
 具体的实现看代码：
 
@@ -78,5 +78,7 @@ public:
 
 ```
 
+更多关于编程和机器学习资料请关注FlyAI公众号号。
+![公众号二维码][1]
 
-
+  [1]: http://pwfic6399.bkt.clouddn.com/wechat/%E5%85%AC%E4%BC%97%E5%8F%B7%E5%8F%B7%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg
