--- a/每日一题/20190822复杂链表的复制/复杂链表的复制.md
+++ b/每日一题/20190822复杂链表的复制/复杂链表的复制.md
@@ -1,7 +1,7 @@
 ---
 
-title: 2019-8-21 二叉树中和为某一值的路径
-tags: 算法,每日一题,二叉树
+title: 2019-8-22 复杂链表复制
+tags: 算法,每日一题,链表
 ---
 
 ## <center> 复杂链表的复制 </center>
@@ -24,6 +24,82 @@ tags: 算法,每日一题,二叉树
 *方案一*：使用一个map建立原节点与复制节点的映射。
 
 *方案二*：将复制的节点挂在原节点之后。
+
+``` C++
+/*
+struct RandomListNode {
+    int label;
+    struct RandomListNode *next, *random;
+    RandomListNode(int x) :
+            label(x), next(NULL), random(NULL) {
+    }
+};
+*/
+
+class Solution {
+public:
+    RandomListNode* Clone(RandomListNode* pHead)
+    {
+        if(pHead == NULL) return pHead; //这个要加上
+        return Clone2(pHead);
+    }
+    RandomListNode* Clone1(RandomListNode* pHead){//使用map的方式构建原节点与复制节点的映射
+        RandomListNode* head = pHead;
+        unordered_map<RandomListNode*, RandomListNode*> ori_copy_map;
+        //1、构建映射关系
+        while(head != NULL){
+            ori_copy_map.insert(make_pair(head, new RandomListNode(head->label) )); //这里必须使用make_pair
+            head = head->next;
+        }
+        //2、构建复制的链接
+        head = pHead;
+        while(head != NULL){
+            if (ori_copy_map[head->next]) ori_copy_map[head]->next = ori_copy_map[head->next];
+            if (ori_copy_map[head->random]) ori_copy_map[head]->random = ori_copy_map[head->random];
+            head = head->next;
+        }
+        
+        return ori_copy_map[pHead];
+    }
+    
+    RandomListNode* Clone2(RandomListNode* pHead){//将复制节点放在原节点后面的方式构建映射
+        RandomListNode* head = pHead;
+        //1、复制原节点
+        while(head != NULL){
+            RandomListNode* new_node = new RandomListNode(head->label);
+            new_node->next = head->next;
+            head->next = new_node;
+            
+            head = new_node->next;
+        }
+        //2、构建随机节点
+        head = pHead;
+        RandomListNode* new_head = pHead->next;
+        while(head != NULL){
+            if (head->random) head->next->random = head->random->next;
+            head = head->next->next;
+        }
+        
+        //3、拆分
+        head = pHead;
+        while(head->next != NULL){ //这里要判断next
+            RandomListNode* temp = head->next;
+            head->next = temp->next;
+            head = temp;
+        }
+        
+        return new_head;
+    }
+    
+};
+```
+
+
+
+更多关于编程和机器学习资料请关注FlyAI公众号。
+![公众号二维码][1]
+
+[1]: http://pwfic6399.bkt.clouddn.com/wechat/%E5%85%AC%E4%BC%97%E5%8F%B7%E5%8F%B7%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg
 
 
 
