--- a/每日一题/20190827括号匹配与字符串逆序/括号匹配与逆序输出.md
+++ b/每日一题/20190827括号匹配与字符串逆序/括号匹配与逆序输出.md
@@ -1,16 +1,16 @@
 ---
-title: 2019-8-25 数组中出现次数超过一半的数
+title: 2019-8-26 括号匹配与逆序输出
 tags: 算法,每日一题,矩阵打印
 ---
 
-## <center>数组中出现次数超过一半的数</center>
+## <center>括号匹配与逆序输出</center>
 
 ### 1. 问题描述
 
-数组中有一个数字出现的次数超过数组长度的一半，请找出这个数字。例如输入一个长度为9的数组{1,2,3,2,2,2,5,4,2}。由于数字2在数组中出现了5次，超过数组长度的一半，因此输出2。如果不存在则输出0。
+给定一个字符串`（（ur）oi）`,每经过一个括号里面的内容翻转一次，如果括号不匹配直接输出空字符串,如果匹配上了返回删除括号后并翻转了的字符串。上面的例子中输出`iour`。
 
 ### 2. 题目解析
-这道题目是关键是如何记录数组中每个数出现的次数或者用什么方法能够快速找到最有可能是出现次数最多的那个数。
+这道题与字符串表达式求值是同样的思路。首先我们先判断括号是否匹配，
 #### 2.1 具体思路
 这里提供了三种方法：
 
