--- a/每日一题/8月15日二叉树的镜像/二叉树的镜像.md
+++ b/每日一题/8月15日二叉树的镜像/二叉树的镜像.md
@@ -3,7 +3,7 @@ title: 2019-8-15 二叉树镜像
 tags: 算法,每日一题,二叉树
 ---
 
-## 二叉树镜像
+## <center>二叉树镜像</center>
 
 ### 1. 题目描述
 操作给定的二叉树，将其变换为源二叉树的镜像。
@@ -91,4 +91,4 @@ public:
 更多关于编程和机器学习资料请关注FlyAI公众号。
 ![公众号二维码][1]
 
-  [1]: http://pwfic6399.bkt.clouddn.com/wechat/%E5%85%AC%E4%BC%97%E5%8F%B7%E5%8F%B7%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg
+[1]: http://pwfic6399.bkt.clouddn.com/wechat/%E5%85%AC%E4%BC%97%E5%8F%B7%E5%8F%B7%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg
