--- a/每日一题/20190830从1到n，1的个数/整数1到n中1的个数.md
+++ b/每日一题/20190830从1到n，1的个数/整数1到n中1的个数.md
@@ -1,16 +1,16 @@
 ---
-title: 2019-8-29 连续子数组的最大和
-tags: 算法,每日一题,子数组
+title: 2019-8-30 整数1到n中1的个数
+tags: 算法,每日一题
 ---
 
-## <center>连续子数组的最大和</center>
+## <center>整数1到n中1的个数</center>
 
 ### 1. 问题描述
 
-HZ偶尔会拿些专业问题来忽悠那些非计算机专业的同学。今天测试组开完会后,他又发话了:在古老的一维模式识别中,常常需要计算连续子向量的最大和,当向量全为正数的时候,问题很好解决。但是,如果向量中包含负数,是否应该包含某个负数,并期望旁边的正数会弥补它呢？例如:{6,-3,-2,7,-15,1,2,2},连续子向量的最大和为8(从第0个开始,到第3个为止)。给一个数组，返回它的最大连续子序列的和，你会不会被他忽悠住？(子向量的长度至少是1)。
+求出1-13的整数中1出现的次数,并算出100-1300的整数中1出现的次数？为此他特别数了一下1~13中包含1的数字有1、10、11、12、13因此共出现6次,但是对于后面问题他就没辙了。ACMer希望你们帮帮他,并把问题更加普遍化,可以很快的求出任意非负整数区间中1出现的次数（从1 到 n 中1出现的次数）。
 
 ### 2. 题目解析
-这道题我们很容易想到暴力方法，遍历数组的所有子数组找到最大的一个即可，时间复杂度 $O(n^2)$。这道题的挑战就是如何将时间复杂度降低。
+最直白的方式就是直接写个函数返回一个数中对应的1的个数，然后依次遍历每个数，时间复杂度为O(n)。那么有没有更好的办法呢？肯定是有的这个时候就要分析数据的特性了，对于个位数，如果个位数大于0，那么个位数就会出现一个1，对于
 
 #### 2.1 具体思路
 这里提供了两种方法：
