--- a/基础学科/数学/程序员线性代数.md
+++ b/基础学科/数学/程序员线性代数.md
@@ -755,7 +755,189 @@ if __name__ == '__main__':
 
 ```
 
+### 实现矩阵的秩
 
+**添加求秩函数：**
+
+```python
+def rank(A):
+    ls = LinearSystem(A)
+    ls.gauss_jordan_elimination()
+
+    zero = Vector.zero(A.col_num())
+    return sum([not (row == zero) for row in ls.Ab])
+```
+
+**修改LinearSystem接口**
+
+``` python
+ def __init__(self, A, b=None):
+        assert b is None or A.row_num() == len(b), "Row number of A must be equal to the length of b"
+        self._m = A.row_num()
+        self._n = A.col_num()
+        if b is None:
+            self.Ab = [Vector(A.row_vector(i).underlying_list()) for i in range(self._m)]
+        if isinstance(b, Vector):
+            self.Ab = [Vector(A.row_vector(i).underlying_list() + [b[i]]) for i in range(self._m)]
+        if isinstance(b, Matrix):
+            self.Ab = [Vector(A.row_vector(i).underlying_list() + b.row_vector(i).underlying_list())
+                       for i in range(self._m)]
+        self.pivots = []  # store positions of pivots
+```
+
+主要修改了第一行，让其能够接受一个参数；
+
+以及修改了第二行，让其在b为None时不会断言失败；
+
+增加了第5和第6行，在b为None时构建系数矩阵；
+
+**对Vector类实现等于符号操作：**
+
+```python
+    def __eq__(self, other):
+        other_list = other.underlying_list()
+        if len(other_list) != len(self._values):
+            return False
+        return all(is_equal(x, y) for x, y in zip(self._values, other_list))
+```
+
+### 实现Gram Schmidt 过程
+
+```python
+# coding=utf-8
+from playLA.Matrix import Matrix
+from playLA.linearSystem import rank
+from playLA.Vector import Vector
+
+
+def gram_schmidt_process(basis):
+    matrix = Matrix(basis)
+    assert rank(matrix) == len(basis)
+    res = [basis[0]]
+    for i in range(1, len(basis)):
+        p = basis[i]
+        for r in res:
+            p = p - basis[i].dot(r) / r.dot(r) * r
+        res.append(p)
+    return res
+
+
+if __name__ == '__main__':
+    # basis = [Vector([2, 1]), Vector([1, 1])]
+    basis = [Vector([1, 1, 5, 2]), Vector([-3, 3, 4, -2]), Vector([-1, -2, 2, 5])]
+    res = gram_schmidt_process(basis)
+
+    res = [row / row.norm() for row in res]
+    for row in res:
+        print(row)
+
+```
+
+### 矩阵的QR分解
+
+```python
+def qr(A):
+    assert A.row_num() == A.col_num(), "A must be square"
+    basis = [A.col_vector(i) for i in range(A.col_num())]
+    P = gram_schmidt_process(basis)
+    Q = Matrix([v / v.norm() for v in P]).T()
+    R = Q.T().dot(A)
+    return Q, R
+```
+
+### numpy求解特征值
+
+```python
+# coding=utf8
+
+import numpy as np
+from numpy.linalg import eig
+
+if __name__ == '__main__':
+    A1 = np.array([[4, -2],
+                   [1, 1]])
+
+    A1 = np.array([[0, 1],
+                  [1, 0]])
+
+    A1 = np.array([[0, -1],
+                  [1, 0]])  # 特征值为复数的情况
+
+    A1 = np.array([[1, 0],
+                  [0, 1]])  # 相同特征值
+
+    eigenvalues, eigenvectors = eig(A1)
+    print(eigenvalues)  # 从大到小排列
+    print(eigenvectors)  # 进行了归一化的处理
+
+```
+
+### 实现属于自己的矩阵对角化
+
+```python
+# coding=utf8
+
+import numpy as np
+from numpy.linalg import eig, inv
+from playLA.linearSystem import rank
+from playLA.Matrix import Matrix
+
+
+def diagonalize(A):
+    assert A.ndim == 2
+    assert A.shape[0] == A.shape[1]
+
+    eigenvalues, eigenvectors = eig(A)
+    P = eigenvectors
+    if rank(Matrix(P.tolist())) != A.shape[0]:
+        print("Matrix can not be diagonalized!")
+        return None, None, None
+    D = np.diag(eigenvalues)
+    Pinv = inv(P)
+
+    return P, D, Pinv
+
+
+if __name__ == "__main__":
+    A = np.array([[4, -2],
+                  [1, 1]])
+    A = np.array([[3, 1],
+                  [0, 3]])
+    P, D, Pinv = diagonalize(A)
+    print(P)
+    print(D)
+    print(Pinv)
+
+
+```
+
+### 实现scipy中的SVD分解
+
+```python
+# coding=utf8
+
+import numpy as np
+from scipy.linalg import svd
+
+if __name__ == "__main__":
+    A = np.array([[1, 2],
+                  [3, 4],
+                  [5, 6]])
+    U, s, VT = svd(A)
+    print(U)
+    print(s)  # 只返回了奇异值
+    print(VT)
+
+    Sigma = np.zeros(A.shape)
+    for i in range(len(s)):
+        Sigma[i][i] = s[i]
+
+    print(Sigma)
+
+    print(U.dot(Sigma).dot(VT))
+```
+
+ 
 
 ## reference
 
